--- a/cards/src/components/CardTransbutton/transbutton.module.scss
+++ b/cards/src/components/CardTransbutton/transbutton.module.scss
@@ -2,8 +2,9 @@
 @import '../../assets/styles/variables.scss';
 
 .transButton {
-    margin-top: 10px;
+    margin-top: 30px;
     background: var(--button-background-color);
     @include font-style-button-text;
     border: var(--border-button);
+    width: 60%;
 }
