--- a/cards/src/App.module.scss
+++ b/cards/src/App.module.scss
@@ -25,6 +25,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around; 
+  height: 25em;
 }
 
 .wordsContainer {
@@ -32,6 +33,7 @@
   flex-direction: row;
   justify-content: space-around; 
   margin-top: 50px;
+  height: 25em;
 }
 
 .resultsContainer {
