--- a/cards/src/components/Card/card.module.scss
+++ b/cards/src/components/Card/card.module.scss
@@ -12,6 +12,7 @@ grid-template-columns: 25% 25% 25% 25%;
     height: 150px;
     min-width: auto;
     max-width: 90%;
+    margin-top: 10px;
 
 }
 
@@ -20,11 +21,10 @@ grid-template-columns: 25% 25% 25% 25%;
     border: double 2px gray;
     margin-top: 30px;
     width: 20vw;
-    height: 16vw;
+    height: 20em;
     text-align: center;
     @include font-style-regular-text;
     padding-bottom: 10px;
-
 }
 
 
