--- a/cards/src/components/Word/word.module.scss
+++ b/cards/src/components/Word/word.module.scss
@@ -5,29 +5,18 @@
 .wordImg  {
     height: 150px;
     width: 90%;
+    margin-top: 10px;
 }
 
 .word {
-    color: var(--text-color);
-    border: double 2px gray;
-    margin-top: 30px;
-    width: 20vw;
-    text-align: center;
-    @include font-style-regular-text;
-    height: auto;
-}
-
-.selected {
-    background: yellowgreen;
-    color: red;
-}
-
-.classWord {
-    color: var(--text-color);
-    border: double 5px rgb(218, 15, 15);
-    margin-top: 30px;
-    width: 20vw;
-    text-align: center;
-    @include font-style-regular-text;
-    height: auto;
-}
+   
+        color: var(--text-color);
+        border: double 2px gray;
+        margin-top: 30px;
+        width: 20vw;
+        height: 20em;
+        text-align: center;
+        @include font-style-regular-text;
+        padding-bottom: 10px;
+    }
+    
