--- a/cards/src/App.module.scss
+++ b/cards/src/App.module.scss
@@ -17,23 +17,22 @@
 
 }
 
-.choice {
+.table {
   margin-top: 30px;
 }
 
 .cardsContainer {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around; 
-  height: 25em;
+display: grid;
+grid-template-columns: 20% 20% 20% 20% 20%;
+grid-template-rows: auto;
+gap: 1em;
 }
 
 .wordsContainer {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around; 
-  margin-top: 50px;
-  height: 25em;
+display: grid;
+grid-template-columns: 20% 20% 20% 20% 20%;
+grid-template-rows: auto;
+gap: 1em;
 }
 
 .resultsContainer {
