--- a/cards/src/assets/styles/mixins.scss
+++ b/cards/src/assets/styles/mixins.scss
@@ -13,7 +13,7 @@
 
 @mixin font-style-regular-text {
     font-family: "Arial";
-    font-size: 1.2em;
+    font-size: 1.4em;
     font-weight: regular;
 }
 
@@ -22,5 +22,12 @@
     font-size: 1.2em;
     font-weight: regular;
 }
+
+@mixin font-style-big-button-text {
+    font-family: "Arial";
+    font-size: 1.6em;
+    font-weight: regular;
+}
+
 
 
