--- a/cards/src/components/Table/table.module.scss
+++ b/cards/src/components/Table/table.module.scss
@@ -3,6 +3,7 @@
 
 .wordsListTable {
 width: 96%;
+height: 40px;
 display: flex;
 flex-direction: row;
 justify-content: space-between;
@@ -25,7 +26,7 @@ width: 20%;
 
 .listButton {
     background: var(--button-background-color);
-    @include font-style-regular-text;
+    @include font-style-button-text;
     border: var(--border-button);
     border-radius: 10px;
 }
