button delete not correct action

--- a/cards/src/App.module.scss
+++ b/cards/src/App.module.scss
@@ -21,6 +21,11 @@
   margin-top: 30px;
 }
 
+.input {
+  margin-top: 30px;
+}
+
+
 .cardsContainer {
 display: grid;
 grid-template-columns: 20% 20% 20% 20% 20%;
