--- a/cards/src/App.module.scss
+++ b/cards/src/App.module.scss
@@ -33,12 +33,90 @@ grid-template-rows: auto;
 gap: 1em;
 }
 
-.wordsContainer {
+.words {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin-top: 50px;
+  border: solid 10px var(--custom-yellow);
+  padding: 20px;
+ 
+}
+
+.wordCard {
+ 
+  border: solid 2px black;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+
+  color: var(--text-color);
+  border: double 2px gray;
+  margin-top: 30px;
+  width: 20vw;
+  height: 20em;
+  text-align: center;
+  @include font-style-regular-text;
+  padding-bottom: 10px;
+
+}
+
+.wordTitle {
+  font-size: 1.8em;
+}
+
+/* .wordsContainer {
 display: grid;
 grid-template-columns: 20% 20% 20% 20% 20%;
 grid-template-rows: auto;
 gap: 1em;
+} */
+
+.buttonList {
+    margin: 30px;
+    background: white;
+    border: transparent;
+    width: 10%;
+    height: 40px;
+    font-size: 3em;
+    -webkit-transition: all 0.8s cubic-bezier(0.165, 0.84, 0.44, 1);
+    transition: all 0.8s cubic-bezier(0.165, 0.84, 0.44, 1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   
 }
+
+.buttonList:hover { 
+    background: var(--button-background-color);
+    -webkit-transform: translate(10px);
+    transform: translate(10px);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5) /* Изменяем тень */
+    }
+
+
+.buttonWordTranslate {
+    margin-top: 30px;
+    background: var(--button-background-color);
+    @include font-style-button-text;
+    border: var(--border-button);
+    width: 60%;
+    -webkit-transition: all 0.8s cubic-bezier(0.165, 0.84, 0.44, 1);
+    transition: all 0.8s cubic-bezier(0.165, 0.84, 0.44, 1);
+    position: absolute;
+    bottom: 50px;
+}
+
+.buttonWordTranslate:hover { 
+    -webkit-transform: translate(10px);
+    transform: translate(10px);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5) /* Изменяем тень */
+    }
+
 
 .resultsContainer {
 
