--- a/cards/src/App.module.scss
+++ b/cards/src/App.module.scss
@@ -67,6 +67,13 @@ gap: 1em;
 
 .wordTitle {
   font-size: 1.8em;
+  
+}
+
+.imgWord {
+  width: 30%;
+  height: 100px;
+  
 }
 
 /* .wordsContainer {
