--- a/cards/src/components/ButtonAddWord/buttonAddWord.module.scss
+++ b/cards/src/components/ButtonAddWord/buttonAddWord.module.scss
@@ -1,9 +1,14 @@
 @import '../../assets/styles/mixins.scss';
 @import '../../assets/styles/variables.scss';
 
+
+
 .buttonAddWordContainer {
-    width: 100vw;
+    width: 30vw;
     @include flex-column;
+    
+    border: solid 2px black;
+    height: 100px;
 }
 
 
@@ -14,11 +19,10 @@
 	box-shadow: inset 4px 2px 2px 3px var(--border-button);
     border: solid 3px var(--button-background-color);
 
-   
     border-radius: var(--border-radius);
-    margin-top: 30px;
+    margin-top: 0px;
     height: 3vw;
-    width: 50vw;
+    width: 20vw;
     @include font-style-big-button-text;
 
     -webkit-transition: all 0.8s cubic-bezier(0.165, 0.84, 0.44, 1);
