--- a/cards/src/components/Menu/menu.module.scss
+++ b/cards/src/components/Menu/menu.module.scss
@@ -11,13 +11,13 @@
     text-decoration: none;
 }
    
-   
-
-
 .link {
     margin: 10px;
     color: black;
 }
+
+.activeLink 
+{ background-color:#486ca3; color: rgb(22, 227, 70); padding:6px;}
    
 
 
