--- a/cardsRoute/src/App.css
+++ b/cardsRoute/src/App.css
@@ -36,12 +36,11 @@
     width: 10vw;
     border-radius: 10px;
    text-align: center;
+   text-decoration: none;
+   color: rgb(8, 43, 173);
   }
   
   .active {
    font-weight: 700;
-
-
-  
   }
 
