--- a/cardsRoute/src/Pages/wordslist.module.scss
+++ b/cardsRoute/src/Pages/wordslist.module.scss
@@ -7,3 +7,36 @@
     background-color: rgb(12, 77, 180);
 }
 
+.inputTable {
+
+    height: 40px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-left: 30px;
+    padding-right: 30px;
+    border: var(--border-table-list);
+    background-color: var(--remainCard-background);
+    margin-top: 50px;
+    }
+    
+    .id, .english, .transcription, .russian, .tableButtons {
+    width: 20%;
+    @include font-style-regular-text;
+    }
+    
+    .tableButtons {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    
+    .listButton {
+        background: var(--button-background-color);
+        @include font-style-regular-text;
+        border: var(--border-button);
+        border-radius: 10px;
+    }
+
+    
+
