--- a/cardsRoute/src/assets/styles/variables.scss
+++ b/cardsRoute/src/assets/styles/variables.scss
@@ -15,6 +15,7 @@
     --border-radius: 10px;
     --border-button: 1px solid rgb(187, 150, 14);
     --border-table-list: 1px solid gray;
+    --customer-blue: rgb(43, 81, 217);
     --text-color: black;
     --button-background-color: rgb(255, 200, 0);
     --custom-yellow: rgb(255, 200, 0);
