--- a/cardsRouteOrigin/src/assets/styles/variables.scss
+++ b/cardsRouteOrigin/src/assets/styles/variables.scss
@@ -1,13 +1,5 @@
 :root  {
-    /*results Cards*/
-  
-    --knowCard-background: rgb(94, 157, 234);
-    --remainCard-background: rgb(98, 232, 114);
-    --dontknowCard-background: rgb(231, 103, 133);
-    --resultsCards-font-size: 2em;
-    --resultsCards-width: 29vw;
-    --resultsCards-height: 14vw;
-  
+
   
     /*common variables*/
   
@@ -16,6 +8,7 @@
     --border-button: 1px solid rgb(187, 150, 14);
     --border-table-list: 1px solid gray;
     --customer-blue: rgb(43, 81, 217);
+    --customer-green:  rgb(98, 232, 114);
     --text-color: black;
     --button-background-color: rgb(255, 200, 0);
     --custom-yellow: rgb(255, 200, 0);
