--- a/cardsRouteOrigin/src/components/WordTransButton/wordtransbutton.module.scss
+++ b/cardsRouteOrigin/src/components/WordTransButton/wordtransbutton.module.scss
@@ -14,5 +14,5 @@
 .transButton:hover { 
     -webkit-transform: translate(10px);
     transform: translate(5px);
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5) /* Изменяем тень */
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5)
     }
