--- a/cardsRouteOrigin/src/components/Footer/footer.scss
+++ b/cardsRouteOrigin/src/components/Footer/footer.scss
@@ -19,7 +19,10 @@
     bottom: 0px;
 
 
-    &__item_footer-home, &__item_footer-wordslist, &__item_footer-wordsgame, &__item_footer-flashcards {
+    &__item_footer-home,
+    &__item_footer-wordslist,
+    &__item_footer-wordsgame,
+    &__item_footer-flashcards {
         font-size: 1.5em;
         background-color: rgb(255, 200, 0);
         width: 15vw;
@@ -29,13 +32,6 @@
         color: rgb(8, 43, 173);
     }
 
-    
-        
+
+
 }
-
-      
-    
-
-
-
-  
