--- a/cardsRouteOrigin/src/Pages/cardsgame.module.scss
+++ b/cardsRouteOrigin/src/Pages/cardsgame.module.scss
@@ -7,43 +7,41 @@
     grid-template-columns: 19% 19% 19% 19% 19%;
     grid-template-rows: auto;
     gap: 0.9%
-    }
+}
 
-    .buttonHideTranslationContainer {
-        width: 100vw;
-        @include flex-column;
-        margin-bottom: 50px;
-    }
-    
-    
-    .buttonHideTranslation {
-        background: white;
-        color: var(--text-color);
-        box-shadow: inset 4px 2px 2px 3px var(--border-button);
-        border: solid 3px var(--button-background-color);
-    
-       
-        border-radius: var(--border-radius);
-        margin-top: 30px;
-        height: 3vw;
-        width: 50vw;
-        @include font-style-big-button-text;
-    
-        -webkit-transition: all 0.8s cubic-bezier(0.165, 0.84, 0.44, 1);
-        transition: all 0.8s cubic-bezier(0.165, 0.84, 0.44, 1);
-    }
-    
-    
-    .buttonHideTranslation:hover {
-    
-        color: var(--text-color);
-        background: var(--button-background-color);
-        border: var(--border-button);
-        
-        -webkit-transform: translate(10px);
-        transform: translate(10px);
-        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5) /* Изменяем тень */
-    }
+.buttonHideTranslationContainer {
+    width: 100vw;
+    @include flex-column;
+    margin-bottom: 50px;
+}
 
 
-    
+.buttonHideTranslation {
+    background: white;
+    color: var(--text-color);
+    box-shadow: inset 4px 2px 2px 3px var(--border-button);
+    border: solid 3px var(--button-background-color);
+
+
+    border-radius: var(--border-radius);
+    margin-top: 30px;
+    height: 3vw;
+    width: 50vw;
+    @include font-style-big-button-text;
+
+    -webkit-transition: all 0.8s cubic-bezier(0.165, 0.84, 0.44, 1);
+    transition: all 0.8s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+
+.buttonHideTranslation:hover {
+
+    color: var(--text-color);
+    background: var(--button-background-color);
+    border: var(--border-button);
+
+    -webkit-transform: translate(10px);
+    transform: translate(10px);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5)
+        /* Изменяем тень */
+}
