--- a/cardsRouteOrigin/src/Pages/wordsgame.module.scss
+++ b/cardsRouteOrigin/src/Pages/wordsgame.module.scss
@@ -2,151 +2,153 @@
 @import '..//assets/styles/variables.scss';
 
 
-    .learnedWords {
-      position: absolute;
-      bottom: 50px;
-      left: 60px;
-      color: var(--text-color);
-      background: white;
-      border: var(--border-button);
-      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
-      border-radius: var(--border-radius);
-      @include font-style-big-button-text;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 10%;
-      width: 20%;
-    }
-
-      
-    .wordImg  {
-          height: 150px;
-          width: 90%;
-          margin-top: 10px;
-      }
+.learnedWords {
+  position: absolute;
+  bottom: 50px;
+  left: 60px;
+  color: var(--text-color);
+  background: white;
+  border: var(--border-button);
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
+  border-radius: var(--border-radius);
+  @include font-style-big-button-text;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 10%;
+  width: 20%;
+}
 
 
-    .words {
-        width: 99.6%;
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
-        margin-top: 50px;
-        border: solid 4px var(--custom-yellow);
-        padding-bottom: 20px;
-        position: relative;
-  
-       
-      }
-      
-      .wordCard {
-       
-        border: solid 2px black;
-        align-items: center;
-        justify-content: center;
-        display: flex;
-        flex-direction: column;
-        position: relative;
-        color: var(--text-color);
-        border: double 2px gray;
-        margin-top: 30px;
-        width: 20vw;
-        height: 20em;
-        text-align: center;
-        @include font-style-regular-text;
-        padding-bottom: 10px;
-      
-      }
-      
-      .wordTitle {
-        font-size: 1.8em;
-        
-      }
-      
-      .imgWord {
-        width: 30%;
-        height: 100px;
-        
-      }
-      
-     
-      .buttonList {
-          margin: 30px;
-          background: white;
-          border: transparent;
-          width: 10%;
-          height: 40px;
-          font-size: 3em;
-          -webkit-transition: all 0.8s cubic-bezier(0.165, 0.84, 0.44, 1);
-          transition: all 0.8s cubic-bezier(0.165, 0.84, 0.44, 1);
-          display: flex;
-          justify-content: center;
-          align-items: center;
-         
-      }
-      
-      .buttonList:hover { 
-          background: var(--button-background-color);
-          -webkit-transform: translate(10px);
-          transform: translate(10px);
-          box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5) /* Изменяем тень */
-          }
-      
-      
-      .buttonWordTranslate {
-          margin-top: 30px;
-          background: var(--button-background-color);
-          @include font-style-button-text;
-          border: var(--border-button);
-          border-radius: var(--border-radius);
-          width: 60%;
-          -webkit-transition: all 0.8s cubic-bezier(0.165, 0.84, 0.44, 1);
-          transition: all 0.8s cubic-bezier(0.165, 0.84, 0.44, 1);
-          position: absolute;
-          bottom: 50px;
-      }
+.wordImg {
+  height: 150px;
+  width: 90%;
+  margin-top: 10px;
+}
 
-      
-      .buttonWordTranslate:hover { 
-          -webkit-transform: translate(10px);
-          transform: translate(10px);
-          box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5) /* Изменяем тень */
-          }
 
-        
-        .buttonAddWord {
-           
-            background:var(--button-background-color);
-            color: var(--text-color);
-            box-shadow: inset 4px 2px 2px 3px var(--border-button);
-            border: solid 3px var(--button-background-color);
-            writing-mode: vertical-rl;
-            text-orientation: upright;
-            border-radius: var(--border-radius);
-            margin-top: 0px;
-            height: 10%;
-            width: 20%;
-            @include font-style-big-button-text;
-            position: absolute;
-            top: 50px;
-            right: 60px;
-        
-        
-            -webkit-transition: all 0.8s cubic-bezier(0.165, 0.84, 0.44, 1);
-            transition: all 0.8s cubic-bezier(0.165, 0.84, 0.44, 1);
-        }
-        
-        
-        .buttonAddWord:hover {
-        
-            color: var(--text-color);
-            background: white;
-            border: var(--border-button);
-            
-            -webkit-transform: translate(10px);
-            transform: translate(10px);
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5) /* Изменяем тень */
-        }
-    
+.words {
+  width: 99.6%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin-top: 50px;
+  border: solid 4px var(--custom-yellow);
+  padding-bottom: 20px;
+  position: relative;
+
+
+}
+
+.wordCard {
+
+  border: solid 2px black;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  color: var(--text-color);
+  border: double 2px gray;
+  margin-top: 30px;
+  width: 20vw;
+  height: 20em;
+  text-align: center;
+  @include font-style-regular-text;
+  padding-bottom: 10px;
+
+}
+
+.wordTitle {
+  font-size: 1.8em;
+
+}
+
+.imgWord {
+  width: 30%;
+  height: 100px;
+
+}
+
+
+.buttonList {
+  margin: 30px;
+  background: white;
+  border: transparent;
+  width: 10%;
+  height: 40px;
+  font-size: 3em;
+  -webkit-transition: all 0.8s cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: all 0.8s cubic-bezier(0.165, 0.84, 0.44, 1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.buttonList:hover {
+  background: var(--button-background-color);
+  -webkit-transform: translate(10px);
+  transform: translate(10px);
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5)
+    /* Изменяем тень */
+}
+
+
+.buttonWordTranslate {
+  margin-top: 30px;
+  background: var(--button-background-color);
+  @include font-style-button-text;
+  border: var(--border-button);
+  border-radius: var(--border-radius);
+  width: 60%;
+  -webkit-transition: all 0.8s cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: all 0.8s cubic-bezier(0.165, 0.84, 0.44, 1);
+  position: absolute;
+  bottom: 50px;
+}
+
+
+.buttonWordTranslate:hover {
+  -webkit-transform: translate(10px);
+  transform: translate(10px);
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5)
+    /* Изменяем тень */
+}
+
+
+.buttonAddWord {
+
+  background: var(--button-background-color);
+  color: var(--text-color);
+  box-shadow: inset 4px 2px 2px 3px var(--border-button);
+  border: solid 3px var(--button-background-color);
+  writing-mode: vertical-rl;
+  text-orientation: upright;
+  border-radius: var(--border-radius);
+  margin-top: 0px;
+  height: 10%;
+  width: 20%;
+  @include font-style-big-button-text;
+  position: absolute;
+  top: 50px;
+  right: 60px;
+
+
+  -webkit-transition: all 0.8s cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: all 0.8s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+
+.buttonAddWord:hover {
+
+  color: var(--text-color);
+  background: white;
+  border: var(--border-button);
+
+  -webkit-transform: translate(10px);
+  transform: translate(10px);
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5)
+    /* Изменяем тень */
+}
