--- a/cardsRouteOrigin/src/components/ButtonAddCard/buttonAddCard.module.scss
+++ b/cardsRouteOrigin/src/components/ButtonAddCard/buttonAddCard.module.scss
@@ -10,11 +10,11 @@
 
 .buttonAddCard {
     background: white;
-	color: var(--text-color);
-	box-shadow: inset 4px 2px 2px 3px var(--border-button);
+    color: var(--text-color);
+    box-shadow: inset 4px 2px 2px 3px var(--border-button);
     border: solid 3px var(--button-background-color);
 
-   
+
     border-radius: var(--border-radius);
     margin-top: 30px;
     height: 3vw;
@@ -31,8 +31,9 @@
     color: var(--text-color);
     background: var(--button-background-color);
     border: var(--border-button);
-	
+
     -webkit-transform: translate(10px);
     transform: translate(10px);
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5) /* Изменяем тень */
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5)
+        /* Изменяем тень */
 }
